feat: add card-contracts

--- a/apps/dashboard/app/globals.css
+++ b/apps/dashboard/app/globals.css
@@ -16,3 +16,31 @@
 .no-scroll {
   overflow: hidden;
 }
+
+@layer utilities {
+
+  .card-container-about {
+    @apply flex flex-col gap-3 xl4k:max-w-full max-w-[250px] rounded-lg border border-lightDark bg-dark shadow;
+  }
+
+  .card-header-about {
+    @apply flex items-center gap-3 rounded-t-lg border-b border-lightDark px-4 py-3
+  }
+
+  .card-header-about-text {
+    @apply text-base font-normal leading-normal
+  }
+
+  .card-body-about {
+    @apply flex flex-col gap-4 px-3
+  }
+
+  .card-description-about {
+    @apply flex flex-col gap-2 p-1
+  }
+  
+  .card-description-title {
+    @apply flex items-center gap-1.5
+  }
+
+}
