--- a/apps/dashboard/app/globals.css
+++ b/apps/dashboard/app/globals.css
@@ -19,7 +19,7 @@
 
 @layer utilities {
   .card-container-about {
-    @apply flex md:max-w-[230px] lg:max-w-[250px] flex-col rounded-lg border border-lightDark bg-dark shadow xl4k:max-w-full;
+    @apply flex sm:max-w-full lg:max-w-[250px] flex-col rounded-lg border border-lightDark bg-dark shadow xl4k:max-w-full;
   }
 
   .card-header-about {
