--- a/apps/dashboard/app/globals.css
+++ b/apps/dashboard/app/globals.css
@@ -108,6 +108,6 @@
   }
 
   .btn-connect-wallet {
-    @apply flex w-full items-center justify-center gap-2 rounded-md bg-lightDark px-3 py-1.5 text-white
+    @apply flex w-full items-center justify-center gap-2 rounded-md border border-transparent bg-lightDark px-3 py-1.5 text-white hover:bg-transparent hover:border hover:border-lightDark;
   }
 }
