--- a/apps/dashboard/app/globals.css
+++ b/apps/dashboard/app/globals.css
@@ -116,4 +116,20 @@
   .card-text-accordion {
     @apply text-sm font-normal leading-normal text-foreground
   }
+
+  .scrollbar::-webkit-scrollbar {
+    background-color: black
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    background-color: black
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background-color: black
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: black
+  }
 }
