fix: fixing layout for tablet fix: removing unused app/layout.tsx file;

--- a/apps/dashboard/app/globals.css
+++ b/apps/dashboard/app/globals.css
@@ -116,3 +116,9 @@
     @apply text-sm font-normal leading-normal text-foreground;
   }
 }
+
+@layer fonts {
+  .font-roboto {
+    font-family: var(--font-roboto) !important;
+  }
+}
