--- a/apps/dashboard/app/globals.css
+++ b/apps/dashboard/app/globals.css
@@ -121,10 +121,14 @@
   }
 
   .link-tangerine {
-    @apply font-roboto tracking-wider text-tangerine hover:text-tangerine/80 uppercase leading-none text-[13px] font-medium;
+    @apply font-mono tracking-wider text-tangerine hover:text-tangerine/80 uppercase leading-none text-[13px] font-medium;
   }
 
   .text-table-header {
     @apply text-xs font-semibold sm:font-medium;
+  }
+
+  .stage-tooltip-box-shadow {
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25), 0px 8px 10px -6px rgba(0, 0, 0, 0.10);
   }
 }
