--- a/apps/dashboard/app/globals.css
+++ b/apps/dashboard/app/globals.css
@@ -131,4 +131,8 @@
   .stage-tooltip-box-shadow {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25), 0px 8px 10px -6px rgba(0, 0, 0, 0.10);
   }
+
+  .section-layout-icon {
+    @apply size-5 sm:size-6 text-foreground;
+  }
 }
