--- a/apps/dashboard/app/globals.css
+++ b/apps/dashboard/app/globals.css
@@ -156,31 +156,31 @@
 @layer base {
   :root {
     --radius: 0.625rem;
-    --background: #ffffff;
-    --foreground: #09090b;
-    --muted: #f5f5f6;
+    --background: #FFFFFF;
+    --foreground: #09090B;
+    --muted: #F5F5F6;
     --muted-foreground: #737373;
-    --card: #ffffff;
-    --card-foreground: #09090b;
-    --popover: #ffffff;
-    --popover-foreground: #09090b;
-    --primary: #18181b;
-    --primary-foreground: #fafafa;
-    --secondary: #f5f5f6;
-    --secondary-foreground: #18181b;
-    --accent: #f4f4f5;
-    --accent-foreground: #18181b;
-    --destructive: #ef4444;
-    --border: #e4e4e7;
-    --input: #e4e4e7;
-    --ring: #a1a1aa;
-    --sidebar: #fafafa;
-    --sidebar-foreground: #09090b;
-    --sidebar-primary: #18181b;
-    --sidebar-primary-foreground: #fafafa;
-    --sidebar-accent: #f5f5f6;
-    --sidebar-accent-foreground: #18181b;
-    --sidebar-border: #e4e4e7;
+    --card: #FFFFFF;
+    --card-foreground: #09090B;
+    --popover: #FFFFFF;
+    --popover-foreground: #09090B;
+    --primary: #18181B;
+    --primary-foreground: #FAFAFA;
+    --secondary: #F5F5F6;
+    --secondary-foreground: #18181B;
+    --accent: #F4F4F5;
+    --accent-foreground: #18181B;
+    --destructive: #EF4444;
+    --border: #E4E4E7;
+    --input: #E4E4E7;
+    --ring: #A1A1AA;
+    --sidebar: #FAFAFA;
+    --sidebar-foreground: #09090B;
+    --sidebar-primary: #18181B;
+    --sidebar-primary-foreground: #FAFAFA;
+    --sidebar-accent: #F5F5F6;
+    --sidebar-accent-foreground: #18181B;
+    --sidebar-border: #E4E4E7;
     --chart-1: #3b82f6;
     --chart-2: #ec4899;
     --chart-3: #f59e0b;
@@ -191,28 +191,27 @@
     --error: #f87171;
     --warning: #facc15;
     --success: #4ade80;
-    --brand: #ec762e;
   }
 
   .dark {
-    --background: #09090b;
-    --foreground: #fafafa;
-    --muted: #27272a;
-    --muted-foreground: #a1a1aa;
-    --card: #18181b;
-    --card-foreground: #fafafa;
-    --popover: #18181b;
-    --popover-foreground: #fafafa;
-    --primary: #fafafa;
-    --primary-foreground: #18181b;
-    --secondary: #27272a;
-    --secondary-foreground: #fafafa;
-    --accent: #27272a;
-    --accent-foreground: #fafafa;
-    --destructive: #7f1d1d;
-    --border: #3f3f46;
-    --input: #3f3f46;
-    --ring: #71717a;
+    --background: #09090B;
+    --foreground: #FAFAFA;
+    --muted: #27272A;
+    --muted-foreground: #A1A1AA;
+    --card: #18181B;
+    --card-foreground: #FAFAFA;
+    --popover: #18181B;
+    --popover-foreground: #FAFAFA;
+    --primary: #FAFAFA;
+    --primary-foreground: #18181B;
+    --secondary: #27272A;
+    --secondary-foreground: #FAFAFA;
+    --accent: #27272A;
+    --accent-foreground: #FAFAFA;
+    --destructive: #7F1D1D;
+    --border: #3F3F46;
+    --input: #3F3F46;
+    --ring: #71717A;
     --chart-1: #3b82f6;
     --chart-2: #ec4899;
     --chart-3: #f59e0b;
@@ -223,6 +222,70 @@
     --error: #f87171;
     --warning: #facc15;
     --success: #4ade80;
-    --brand: #ec762e;
+    --brand: #EC762E;
+  }
+}
+
+@layer utilities {
+  .card-container-about {
+    @apply flex flex-col rounded-lg border border-lightDark bg-dark shadow sm:max-w-full lg:max-w-[250px] xl4k:max-w-full;
+  }
+
+  .card-header-about {
+    @apply flex items-center gap-3 rounded-t-lg border-b border-lightDark px-4 py-3;
+  }
+
+  .card-header-about-text {
+    @apply text-base font-normal leading-normal;
+  }
+
+  .card-body-about {
+    @apply flex h-full flex-col gap-4 p-3;
+  }
+
+  .card-description-about {
+    @apply flex h-full flex-col space-y-2 p-1;
+  }
+
+  .card-description-title {
+    @apply flex items-center gap-1.5;
+  }
+
+  .skeleton-text {
+    @apply animate-pulse rounded-md bg-gray-300;
+  }
+
+  .skeleton-icon {
+    @apply animate-pulse rounded-full bg-gray-300;
+  }
+
+  .btn-connect-wallet {
+    @apply flex size-9 w-full items-center justify-center gap-1.5 rounded-md border border-transparent bg-lightDark px-2 py-1 text-white hover:border hover:border-lightDark hover:bg-transparent;
+  }
+
+  .card-text-accordion {
+    @apply text-sm font-normal leading-normal text-foreground;
+  }
+
+  .section-title-gap {
+    @apply gap-4 sm:gap-6;
+  }
+
+  .link-tangerine {
+    @apply hover:text-tangerine/80 font-mono text-[13px] font-medium uppercase leading-none tracking-wider text-tangerine;
+  }
+
+  .text-table-header {
+    @apply text-xs font-semibold sm:font-medium;
+  }
+
+  .stage-tooltip-box-shadow {
+    box-shadow:
+      0px 4px 4px 0px rgba(0, 0, 0, 0.25),
+      0px 8px 10px -6px rgba(0, 0, 0, 0.1);
+  }
+
+  .section-layout-icon {
+    @apply size-6 text-foreground;
   }
 }
