--- a/apps/dashboard/app/globals.css
+++ b/apps/dashboard/app/globals.css
@@ -19,59 +19,74 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 240 10% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
-    --primary: 240 5.9% 10%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
-    --muted: 240 4.8% 95.9%;
-    --muted-foreground: 240 3.8% 46.1%;
-    --accent: 240 4.8% 95.9%;
-    --accent-foreground: 240 5.9% 10%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 240 5.9% 90%;
-    --input: 240 5.9% 90%;
-    --ring: 240 10% 3.9%;
-    --chart-1: 173 58% 39%;
-    --chart-2: 12 76% 61%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
+    --radius: 0.625rem;
+    --background: #FFFFFF;
+    --foreground: #09090B;
+    --muted: #F5F5F6;
+    --muted-foreground: #737373;
+    --card: #FFFFFF;
+    --card-foreground: #09090B;
+    --popover: #FFFFFF;
+    --popover-foreground: #09090B;
+    --primary: #18181B;
+    --primary-foreground: #FAFAFA;
+    --secondary: #F5F5F6;
+    --secondary-foreground: #18181B;
+    --accent: #F4F4F5;
+    --accent-foreground: #18181B;
+    --destructive: #EF4444;
+    --border: #E4E4E7;
+    --input: #E4E4E7;
+    --ring: #A1A1AA;
+    --sidebar: #FAFAFA;
+    --sidebar-foreground: #09090B;
+    --sidebar-primary: #18181B;
+    --sidebar-primary-foreground: #FAFAFA;
+    --sidebar-accent: #F5F5F6;
+    --sidebar-accent-foreground: #18181B;
+    --sidebar-border: #E4E4E7;
+    --chart-1: #3b82f6;
+    --chart-2: #ec4899;
+    --chart-3: #f59e0b;
+    --chart-4: #a855f7;
+    --chart-5: #10b981;
+    --chart-6: #06b6d4;
+    --chart-7: #fbbf24;
+    --error: #f87171;
+    --warning: #facc15;
+    --success: #4ade80;
   }
 
   .dark {
-    --background: 240 10% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 240 10% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 240 10% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 240 5.9% 10%;
-    --secondary: 240 3.7% 15.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 240 3.7% 15.9%;
-    --muted-foreground: 240 5% 64.9%;
-    --accent: 240 3.7% 15.9%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 240 3.7% 15.9%;
-    --input: 240 3.7% 15.9%;
-    --ring: 240 4.9% 83.9%;
-    --chart-1: 220 70% 50%;
-    --chart-2: 340 75% 55%;
-    --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
-    --chart-5: 160 60% 45%;
-    --chart-6: 200 75% 45%;
-    --chart-7: 50 85% 50%;
+    --background: #09090B;
+    --foreground: #FAFAFA;
+    --muted: #27272A;
+    --muted-foreground: #A1A1AA;
+    --card: #18181B;
+    --card-foreground: #FAFAFA;
+    --popover: #18181B;
+    --popover-foreground: #FAFAFA;
+    --primary: #FAFAFA;
+    --primary-foreground: #18181B;
+    --secondary: #27272A;
+    --secondary-foreground: #FAFAFA;
+    --accent: #27272A;
+    --accent-foreground: #FAFAFA;
+    --destructive: #7F1D1D;
+    --border: #3F3F46;
+    --input: #3F3F46;
+    --ring: #71717A;
+    --chart-1: #3b82f6;
+    --chart-2: #ec4899;
+    --chart-3: #f59e0b;
+    --chart-4: #a855f7;
+    --chart-5: #10b981;
+    --chart-6: #06b6d4;
+    --chart-7: #fbbf24;
+    --error: #f87171;
+    --warning: #facc15;
+    --success: #4ade80;
+    --brand: #EC762E;
   }
 }
 
@@ -109,7 +124,7 @@
   }
 
   .btn-connect-wallet {
-    @apply w-full flex size-9 items-center justify-center gap-1.5 rounded-md border border-transparent bg-lightDark py-1 px-2 text-white hover:border hover:border-lightDark hover:bg-transparent;
+    @apply flex size-9 w-full items-center justify-center gap-1.5 rounded-md border border-transparent bg-lightDark px-2 py-1 text-white hover:border hover:border-lightDark hover:bg-transparent;
   }
 
   .card-text-accordion {
@@ -121,7 +136,7 @@
   }
 
   .link-tangerine {
-    @apply font-mono tracking-wider text-tangerine hover:text-tangerine/80 uppercase leading-none text-[13px] font-medium;
+    @apply hover:text-tangerine/80 font-mono text-[13px] font-medium uppercase leading-none tracking-wider text-tangerine;
   }
 
   .text-table-header {
@@ -129,7 +144,9 @@
   }
 
   .stage-tooltip-box-shadow {
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25), 0px 8px 10px -6px rgba(0, 0, 0, 0.10);
+    box-shadow:
+      0px 4px 4px 0px rgba(0, 0, 0, 0.25),
+      0px 8px 10px -6px rgba(0, 0, 0, 0.1);
   }
 
   .section-layout-icon {
