--- a/apps/dashboard/app/globals.css
+++ b/apps/dashboard/app/globals.css
@@ -75,15 +75,15 @@
 }
 
 @utility card-container-about {
-  @apply flex flex-col rounded-lg border border-light-dark bg-dark shadow-sm sm:max-w-full lg:max-w-[250px] xl4k:max-w-full;
+  @apply border-light-dark bg-dark xl4k:max-w-full flex flex-col rounded-lg border shadow-sm sm:max-w-full lg:max-w-[250px];
 }
 
 @utility card-header-about {
-  @apply flex items-center gap-3 rounded-t-lg border-b border-light-dark px-4 py-3;
+  @apply border-light-dark flex items-center gap-3 rounded-t-lg border-b px-4 py-3;
 }
 
 @utility card-header-about-text {
-  @apply text-base font-normal leading-normal;
+  @apply text-base leading-normal font-normal;
 }
 
 @utility card-body-about {
@@ -107,11 +107,11 @@
 }
 
 @utility btn-connect-wallet {
-  @apply flex size-9 w-full items-center justify-center gap-1.5 rounded-md border border-transparent bg-light-dark px-2 py-1 text-white hover:border hover:border-light-dark hover:bg-transparent;
+  @apply bg-light-dark hover:border-light-dark flex size-9 w-full items-center justify-center gap-1.5 rounded-md border border-transparent px-2 py-1 text-white hover:border hover:bg-transparent;
 }
 
 @utility card-text-accordion {
-  @apply text-sm font-normal leading-normal text-foreground;
+  @apply text-foreground text-sm leading-normal font-normal;
 }
 
 @utility section-title-gap {
@@ -119,7 +119,7 @@
 }
 
 @utility link-tangerine {
-  @apply hover:text-tangerine/80 font-mono text-[13px] font-medium uppercase leading-none tracking-wider text-tangerine;
+  @apply hover:text-tangerine/80 text-tangerine font-mono text-[13px] leading-none font-medium tracking-wider uppercase;
 }
 
 @utility text-table-header {
@@ -133,7 +133,7 @@
 }
 
 @utility section-layout-icon {
-  @apply size-6 text-foreground;
+  @apply text-foreground size-6;
 }
 
 @layer utilities {
@@ -156,31 +156,31 @@
 @layer base {
   :root {
     --radius: 0.625rem;
-    --background: #FFFFFF;
-    --foreground: #09090B;
-    --muted: #F5F5F6;
+    --background: #ffffff;
+    --foreground: #09090b;
+    --muted: #f5f5f6;
     --muted-foreground: #737373;
-    --card: #FFFFFF;
-    --card-foreground: #09090B;
-    --popover: #FFFFFF;
-    --popover-foreground: #09090B;
-    --primary: #18181B;
-    --primary-foreground: #FAFAFA;
-    --secondary: #F5F5F6;
-    --secondary-foreground: #18181B;
-    --accent: #F4F4F5;
-    --accent-foreground: #18181B;
-    --destructive: #EF4444;
-    --border: #E4E4E7;
-    --input: #E4E4E7;
-    --ring: #A1A1AA;
-    --sidebar: #FAFAFA;
-    --sidebar-foreground: #09090B;
-    --sidebar-primary: #18181B;
-    --sidebar-primary-foreground: #FAFAFA;
-    --sidebar-accent: #F5F5F6;
-    --sidebar-accent-foreground: #18181B;
-    --sidebar-border: #E4E4E7;
+    --card: #ffffff;
+    --card-foreground: #09090b;
+    --popover: #ffffff;
+    --popover-foreground: #09090b;
+    --primary: #18181b;
+    --primary-foreground: #fafafa;
+    --secondary: #f5f5f6;
+    --secondary-foreground: #18181b;
+    --accent: #f4f4f5;
+    --accent-foreground: #18181b;
+    --destructive: #ef4444;
+    --border: #e4e4e7;
+    --input: #e4e4e7;
+    --ring: #a1a1aa;
+    --sidebar: #fafafa;
+    --sidebar-foreground: #09090b;
+    --sidebar-primary: #18181b;
+    --sidebar-primary-foreground: #fafafa;
+    --sidebar-accent: #f5f5f6;
+    --sidebar-accent-foreground: #18181b;
+    --sidebar-border: #e4e4e7;
     --chart-1: #3b82f6;
     --chart-2: #ec4899;
     --chart-3: #f59e0b;
@@ -191,28 +191,28 @@
     --error: #f87171;
     --warning: #facc15;
     --success: #4ade80;
-    --brand: #EC762E;
+    --brand: #ec762e;
   }
 
   .dark {
-    --background: #09090B;
-    --foreground: #FAFAFA;
-    --muted: #27272A;
-    --muted-foreground: #A1A1AA;
-    --card: #18181B;
-    --card-foreground: #FAFAFA;
-    --popover: #18181B;
-    --popover-foreground: #FAFAFA;
-    --primary: #FAFAFA;
-    --primary-foreground: #18181B;
-    --secondary: #27272A;
-    --secondary-foreground: #FAFAFA;
-    --accent: #27272A;
-    --accent-foreground: #FAFAFA;
-    --destructive: #7F1D1D;
-    --border: #3F3F46;
-    --input: #3F3F46;
-    --ring: #71717A;
+    --background: #09090b;
+    --foreground: #fafafa;
+    --muted: #27272a;
+    --muted-foreground: #a1a1aa;
+    --card: #18181b;
+    --card-foreground: #fafafa;
+    --popover: #18181b;
+    --popover-foreground: #fafafa;
+    --primary: #fafafa;
+    --primary-foreground: #18181b;
+    --secondary: #27272a;
+    --secondary-foreground: #fafafa;
+    --accent: #27272a;
+    --accent-foreground: #fafafa;
+    --destructive: #7f1d1d;
+    --border: #3f3f46;
+    --input: #3f3f46;
+    --ring: #71717a;
     --chart-1: #3b82f6;
     --chart-2: #ec4899;
     --chart-3: #f59e0b;
@@ -223,6 +223,6 @@
     --error: #f87171;
     --warning: #facc15;
     --success: #4ade80;
-    --brand: #EC762E;
+    --brand: #ec762e;
   }
 }
