--- a/apps/dashboard/app/globals.css
+++ b/apps/dashboard/app/globals.css
@@ -4,9 +4,12 @@
 
 @theme {
   --breakpoint-xl4k: 2000px;
-
   --font-mono: var(--font-mono);
+  --tracking-wider: 0.72px;
+  --animate-accordion-down: accordion-down 0.2s ease-out;
+  --animate-accordion-up: accordion-up 0.2s ease-out;
 
+  /* Old System Colors */
   --color-darkest: var(--base-background);
   --color-dark: var(--base-card);
   --color-middle-dark: var(--base-border);
@@ -21,11 +24,9 @@
   --color-background-contrast: var(--base-muted);
   --color-text-primary: var(--base-primary);
 
-  --animate-accordion-down: accordion-down 0.2s ease-out;
-  --animate-accordion-up: accordion-up 0.2s ease-out;
 
-  --tracking-wider: 0.72px;
 
+  /* Icon Sizes */
   --size-icon-xxs: 16px;
   --size-icon-xs: 20px;
   --size-icon-sm: 24px;
@@ -33,6 +34,7 @@
   --size-icon-lg: 48px;
   --size-icon-xl: 76px;
 
+  /* Text Sizes */
   --text-alternative-sm: 13px;
   --text-alternative-sm--line-height: 18px;
   --text-alternative-sm--letter-spacing: 6%;
@@ -83,6 +85,90 @@
   }
 }
 
+
+
+@layer utilities {
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .scrollbar-none::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .scrollbar-none {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
+  .no-scroll {
+    overflow: hidden;
+  }
+
+  .card-container-about {
+    @apply border-light-dark bg-dark xl4k:max-w-full flex flex-col rounded-lg border shadow-sm sm:max-w-full lg:max-w-[250px];
+  }
+
+  .card-header-about {
+    @apply border-light-dark flex items-center gap-3 rounded-t-lg border-b px-4 py-3;
+  }
+
+  .card-header-about-text {
+    @apply text-base leading-normal font-normal;
+  }
+
+  .card-body-about {
+    @apply flex h-full flex-col gap-4 p-3;
+  }
+
+  .card-description-about {
+    @apply flex h-full flex-col space-y-2 p-1;
+  }
+
+  .card-description-title {
+    @apply flex items-center gap-1.5;
+  }
+
+  .skeleton-text {
+    @apply animate-pulse rounded-md bg-gray-300;
+  }
+
+  .skeleton-icon {
+    @apply animate-pulse rounded-full bg-gray-300;
+  }
+
+  .btn-connect-wallet {
+    @apply bg-light-dark hover:border-light-dark flex size-9 w-full items-center justify-center gap-1.5 rounded-md border border-transparent px-2 py-1 text-white hover:border hover:bg-transparent;
+  }
+
+  .card-text-accordion {
+    @apply text-foreground text-sm leading-normal font-normal;
+  }
+
+  .section-title-gap {
+    @apply gap-4 sm:gap-6;
+  }
+
+  .link-tangerine {
+    @apply hover:text-tangerine/80 text-tangerine font-mono text-[13px] leading-none font-medium tracking-wider uppercase;
+  }
+
+  .text-table-header {
+    @apply text-xs font-semibold sm:font-medium;
+  }
+
+  .stage-tooltip-box-shadow {
+    box-shadow:
+      0px 4px 4px 0px rgba(0, 0, 0, 0.25),
+      0px 8px 10px -6px rgba(0, 0, 0, 0.1);
+  }
+
+  .section-layout-icon {
+    @apply text-foreground size-6;
+  }
+
+}
+
+
 /*
   The default border color has changed to `currentcolor` in Tailwind CSS v4,
   so we've added these compatibility styles to make sure everything still
@@ -91,6 +177,7 @@
   If we ever want to remove these styles, we need to add an explicit border
   color utility to any element that depends on these defaults.
 */
+
 @layer base {
   *,
   ::after,
@@ -115,88 +202,8 @@
   h4 {
     @apply text-[20px] leading-[28px] tracking-[-0.5%];
   }
-}
 
-@utility card-container-about {
-  @apply border-light-dark bg-dark xl4k:max-w-full flex flex-col rounded-lg border shadow-sm sm:max-w-full lg:max-w-[250px];
-}
 
-@utility card-header-about {
-  @apply border-light-dark flex items-center gap-3 rounded-t-lg border-b px-4 py-3;
-}
-
-@utility card-header-about-text {
-  @apply text-base leading-normal font-normal;
-}
-
-@utility card-body-about {
-  @apply flex h-full flex-col gap-4 p-3;
-}
-
-@utility card-description-about {
-  @apply flex h-full flex-col space-y-2 p-1;
-}
-
-@utility card-description-title {
-  @apply flex items-center gap-1.5;
-}
-
-@utility skeleton-text {
-  @apply animate-pulse rounded-md bg-gray-300;
-}
-
-@utility skeleton-icon {
-  @apply animate-pulse rounded-full bg-gray-300;
-}
-
-@utility btn-connect-wallet {
-  @apply bg-light-dark hover:border-light-dark flex size-9 w-full items-center justify-center gap-1.5 rounded-md border border-transparent px-2 py-1 text-white hover:border hover:bg-transparent;
-}
-
-@utility card-text-accordion {
-  @apply text-foreground text-sm leading-normal font-normal;
-}
-
-@utility section-title-gap {
-  @apply gap-4 sm:gap-6;
-}
-
-@utility link-tangerine {
-  @apply hover:text-tangerine/80 text-tangerine font-mono text-[13px] leading-none font-medium tracking-wider uppercase;
-}
-
-@utility text-table-header {
-  @apply text-xs font-semibold sm:font-medium;
-}
-
-@utility stage-tooltip-box-shadow {
-  box-shadow:
-    0px 4px 4px 0px rgba(0, 0, 0, 0.25),
-    0px 8px 10px -6px rgba(0, 0, 0, 0.1);
-}
-
-@utility section-layout-icon {
-  @apply text-foreground size-6;
-}
-
-@layer utilities {
-  /* Hide scrollbar for Chrome, Safari and Opera */
-  .scrollbar-none::-webkit-scrollbar {
-    display: none;
-  }
-
-  /* Hide scrollbar for IE, Edge and Firefox */
-  .scrollbar-none {
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
-  }
-
-  .no-scroll {
-    overflow: hidden;
-  }
-}
-
-@layer base {
   :root {
     --radius: 0.625rem;
     --base-background: #ffffff;
