--- a/apps/dashboard/app/globals.css
+++ b/apps/dashboard/app/globals.css
@@ -72,18 +72,18 @@
   --color-surface-destructive-hover: var(--base-destructive-hover);
   --color-surface-disabled: var(--base-muted);
 
-  /* Light Surface Colors */
-  --color-surface-success: var(--base-success-opacity);
-  --color-surface-warning: var(--base-warning-opacity);
-  --color-surface-error: var(--base-error-opacity);
-  --color-surface-brand: var(--base-brand-opacity);
+  /* Opacity Surface Colors */
+  --color-surface-opacity-success: var(--base-success-opacity);
+  --color-surface-opacity-warning: var(--base-warning-opacity);
+  --color-surface-opacity-error: var(--base-error-opacity);
+  --color-surface-opacity-brand: var(--base-brand-opacity);
   --color-surface-opacity: var(--base-primary-opacity);
 
-  /* Dark Surface Colors */
-  --color-surface-success: var(--base-success);
-  --color-surface-warning: var(--base-warning);
-  --color-surface-error: var(--base-error);
-  --color-surface-brand: var(--base-brand);
+  /* Solid Surface Colors */
+  --color-surface-solid-success: var(--base-success);
+  --color-surface-solid-warning: var(--base-warning);
+  --color-surface-solid-error: var(--base-error);
+  --color-surface-solid-brand: var(--base-brand);
 
 
   /* Icon Sizes */
